--- a/templates/default/static/user.css
+++ b/templates/default/static/user.css
@@ -1,3 +1,4 @@
-.carousel-control-prev:hover, .carousel-control-next:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-}
+/* user.css ----------------------------------------------------------------- */
+/* Please don't edit the original of this file.
+ * Instead copy into a template and edit the copy.
+ */
